--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ textarea {
 body, html {
   margin: 0;
   padding: 0;
-  background-color: #f3c445;
+  background-color: rgb(113, 50, 74);
 }
 
 body {
@@ -120,10 +120,11 @@ main {
   max-height: 755px;
   margin: auto;
   position: relative;
+  overflow: hidden;
 }
 
 h1 {
-  color: #a2da14;
+  color: rgb(243, 196, 69);
 }
 
 section:first-child {
@@ -153,10 +154,15 @@ section:first-child h2 {
   justify-content: center;
 }
 
+.gameStart {
+  flex-direction: row;
+
+}
+
 section:first-child div {
   padding: 20px;
 
-  background: #a2da14;
+  background: rgb(243, 196, 69);
 }
 
 section:first-child form {
@@ -173,44 +179,73 @@ input[type=text] {
   width: 100%;
   margin: 10px;
   border: 1px dashed burlywood;
-  padding: 11px;
+  background-color: rgba(113, 50, 74, 0.5);
+  padding: 15px;
+}
+
+input[type=text]:focus {
+ background-color: rgba(113, 50, 74, 0.3);
 }
 
 input[type=submit] {
   border: 2px solid burlywood;
-  padding: 6px 15px;
+  padding: 15px 20px;
   background: khaki;
   cursor: pointer;
+  font-size: 1.2rem;
+
+}
+
+input[type=submit]:active {
+  background: green;
 }
 
 .gameStart {
- margin-left: 15%;
+  width: 100%;
+  position: relative;
+  height: 100vh;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .gameStart > div:first-child img {
   display: block;
-  margin: auto;
-  height: 79.5vh;
-  max-height: 600px;
-  min-height: 100px;
+  width: 100%;
+  max-width: 305px;
 }
 
 .gameStart > div:last-child  {
-  width: 35%;
-  background-color: burlywood;
+
+  background-color: #a2754c;
+  display: flex;
+width: 100%;
+height: 20vh;
+flex-direction: row;
+justify-content: space-around;
+align-items: center;
 }
 
 .gameStart > div:first-child  {
-  width: 65%;
   max-height: 755px;
+  margin-top: 50px;
+overflow: hidden;
+height: 80vh;
+position: relative;
+width: 100%;
+display: flex;
+align-items: end;
+justify-content: center;
 }
 
 .gameStart .talkPc {
   width: 100%;
-  height: 20vh;
+  height: 10vh;
   max-height: 153px;
-  background: aliceblue;
+  background: rgba(217, 189, 20, 0.8);
   border: 1px solid burlywood;
+  position: absolute;
+  bottom: 0px;
 }
 
 .gameStart .talkPc p {
@@ -218,12 +253,14 @@ input[type=submit] {
 }
 
 .gameStart > div:last-child img {
-  width: 120px;
+  width: 20%;
+  max-width: 75px;
   display: block;
   margin: 23% auto;
   cursor: pointer;
   position: relative;
   z-index: 0;
+
 }
 
 .gameStart > div:last-child img:hover {
@@ -231,8 +268,29 @@ input[type=submit] {
 
 }
 
-#gameEnd img {
+.gameEnd {
+  flex-direction: column;
+  align-items: center;
   height: 100vh;
+  justify-content: space-between;
+}
+
+.gameEnd a {
+  background: antiquewhite;
+  font-size: 1.5rem;
+  margin: 15px 0;
+  padding: 10px;
+  text-decoration: none;
+  transition: 0.5s ease;
+  border: 1px solid lightgreen;
+  border-radius: 2px;
+}
+
+
+
+.gameEnd img {
+  width: 100%;
+  max-width: 400px;
 }
 
 /* Small devices (landscape phones, 576px and up)*/
@@ -241,15 +299,48 @@ input[type=submit] {
 
  }
 
-/* Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) { ... }
-
-/* Large devices (desktops, 992px and up)*/
-@media (min-width: 992px) { ... }
-
 /* Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) {
+@media (min-width: 900px) {
 
+  .gameStart {
+
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  .gameStart > div:last-child  {
+    width: 20%;
+    height: 100%;
+    max-height: 755px;
+    flex-direction: column;
+
+  }
+  .gameStart > div:first-child  {
+    width: 85%;
+    margin-left: 15%;
+    margin-top: 0;
+    height: 100%;
+    max-height: 755px;
+  }
+
+  .gameStart > div:first-child img {
+    max-width: 440px;
+  }
+
+  .gameStart > div:last-child img {
+    width: 70%;
+    max-width: 100px;
+  }
+
+  .gameStart .talkPc {
+    height: 20vh;
+    font-size: 1.5rem;
+  }
+
+  .gameEnd a:hover {
+  background: green;
+  color: white;
+  }
 
  }
 
