add picture finish and integer in main.js and index.html

--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ textarea {
 body, html {
   margin: 0;
   padding: 0;
-  background-color: rgb(113, 50, 74);
+  background-color: white;
 }
 
 body {
