check validator and clean css

--- a/css/main.css
+++ b/css/main.css
@@ -104,84 +104,123 @@ textarea {
    ========================================================================== */
 
 body, html {
-  margin: 0;
   padding: 0;
   background-color: white;
-  color: #745450;
+
 }
 
 body {
   height: 100vh;
-  text-align: center;
 }
 
 main {
-  width: 100%;
   max-width: 900px;
-  max-height: 755px;
   margin: auto;
-  position: relative;
   overflow: hidden;
 }
 
 /*===============  Repete action ================*/
 
+/*Display*/
 body, .gameStart, section:first-child, section:first-child form, .gameStart > div:last-child, .gameStart > div:first-child {
   display: flex;
 }
+.gameStart > div:first-child img, .gameStart > div:last-child img, main, .gameEnd  {
+  display: block;
+}
 
+/*Flex*/
+section:first-child, .gameStart, .gameEnd {
+  flex-direction: column;
+}
+.gameStart, .gameStart > div:last-child {
+  flex-direction: row;
+}
+
+/*Width*/
+input[type=text], main, .gameStart, .gameStart > div:first-child img, .gameStart > div:first-child, .gameStart .talkPc {
+  width: 100%;
+}
+/*Height*/
+section:first-child, .gameStart > div:first-child, .gameStart > div:last-child, .gameStart > div:first-child {
+  max-height: 755px;
+}
+
+/*Colors*/
+h1, input[type=text], input[type=text]::placeholder {
+  color: rgb(243, 196, 69);
+}
+
+body, input[type=submit], .gameEnd a {
+  color: #745450;
+}
+
+section:first-child, .gameStart > div:last-child {
+  background-color: #a2754c;
+}
+
+/*Transition*/
+section:first-child, input[type=submit], .gameEnd a {
+  transition: 0.2s ease;
+}
+
+/*Margin*/
+body, html, h1, section:first-child h2, section:first-child p {
+  margin: 0;
+}
+
+/*Cursor*/
+.gameStart > div:last-child img, input[type=submit] {
+  cursor: pointer;
+}
+
+/*Text align*/
+body, input[type=text] {
+  text-align: center;
+}
+
+/*Font size*/
+section:first-child p, input[type=text], input[type=submit], .gameStart .talkPc p {
+  font-size: 1.2rem;
+}
+
+/*Position*/
+section:first-child img, .gameStart, .gameStart > div:first-child, .gameStart > div:last-child img, main {
+  position: relative;
+}
+section:first-child, .gameStart .talkPc {
+  position: absolute;
+}
 
 /*----------------------------------------------------------------------------------
 ----------------------------Index menu----------------------------------------------
 -----------------------------------------------------------------------------*/
 
-h1 {
-  color: rgb(243, 196, 69);
-  margin: 0;
-}
-
 section:first-child {
-  position: absolute;
-  background-color: #a2754c;
   height: 99.9vh;
-  max-height: 755px;
   width: 100vw;
   max-width: 900px;
   align-items: center;
   z-index: 1;
-  transition: 0.5s ease-in;
-  flex-direction: column;
-  text-align: center;
 
 }
 
 section:first-child h2 {
-  text-align: center;
   line-height: 57px;
-  margin: 0;
-  color: #745450;
 }
 
 section:first-child img {
   height: 40%;
-  position: relative;
   top: 5%;
 }
-
 
 .gameStart, section:first-child  {
   flex-wrap: nowrap;
   justify-content: center;
 }
 
-.gameStart {
-  flex-direction: row;
-
-}
-
 section:first-child div {
   padding: 20px;
-
   background: rgb(243, 196, 69);
 }
 
@@ -194,26 +233,12 @@ section:first-child h2 {
   display: none;
 }
 
-section:first-child p {
-  color: #745450;
-  margin: 0;
-  font-size: 1.2rem;
-}
-
 input[type=text] {
-  width: 100%;
   margin: 10px;
   border: 1px dashed burlywood;
   background-color: rgba(113, 50, 74, 0.5);
   padding: 10px;
-  color: rgb(243, 196, 69);
   font-weight: bold;
-  font-size: 1.2rem;
-  text-align: center;
-}
-
-input[type=text]::placeholder {
-  color: green;
 }
 
 input[type=text]:focus {
@@ -224,10 +249,6 @@ input[type=submit] {
   border: none;
   padding: 15px 20px;
   background: rgb(250, 179, 188);
-  cursor: pointer;
-  font-size: 1.2rem;
-  color: #745450;
-  transition: 0.5s ease;
 }
 
 input[type=submit]:active {
@@ -241,65 +262,42 @@ input[type=submit]:active {
 -----------------------------------------------------------------------------*/
 
 .gameStart {
-  width: 100%;
-  position: relative;
   height: 100vh;
   flex-wrap: nowrap;
-  flex-direction: column;
   justify-content: space-between;
   background: rgb(162, 218, 20);
 }
 
 .gameStart > div:first-child img {
-  display: block;
-  width: 100%;
   max-width: 305px;
 }
 
 .gameStart > div:last-child  {
-  background-color: #a2754c;
-  width: 100%;
   height: 20vh;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
 
 .gameStart > div:first-child  {
-  max-height: 755px;
   margin-top: 50px;
   overflow: hidden;
   height: 80vh;
-  position: relative;
-  width: 100%;
-  display: flex;
   align-items: end;
   justify-content: center;
 }
 
 .gameStart .talkPc {
-  width: 100%;
   height: 10vh;
   max-height: 153px;
   background: rgba(217, 189, 20, 0.8);
   border: 1px solid burlywood;
-  position: absolute;
   bottom: 0px;
-}
-
-.gameStart .talkPc p {
-  text-align: center;
-  font-size: 1.2rem;
-  color: #745450;
 }
 
 .gameStart > div:last-child img {
   width: 20%;
   max-width: 75px;
-  display: block;
   margin: 23% auto;
-  cursor: pointer;
-  position: relative;
   z-index: 0;
 
 }
@@ -312,13 +310,11 @@ input[type=submit]:active {
 -----------------------------------------------------------------------------*/
 
 .gameEnd {
-  flex-direction: column;
   align-items: center;
   height: 100vh;
   justify-content: space-between;
   background: rgb(162, 218, 20);
   max-width: 900px;
-  max-height: 744px;
   border-left: 5px dashed #a2754c;
   border-right: 5px dashed #a2754c;
 }
@@ -327,10 +323,8 @@ input[type=submit]:active {
   background: rgb(250, 179, 188);
   font-size: 1.5rem;
   margin: 15px 0;
-  color: #745450;
   padding: 10px;
   text-decoration: none;
-  transition: 0.5s ease;
   border: none;
   border-radius: 2px;
 }
@@ -366,7 +360,6 @@ input[type=submit]:active {
   .gameStart > div:last-child  {
     width: 20%;
     height: 100%;
-    max-height: 755px;
     flex-direction: column;
 
   }
@@ -376,7 +369,6 @@ input[type=submit]:active {
     margin-left: 15%;
     margin-top: 0;
     height: 100%;
-    max-height: 755px;
   }
 
   .gameStart > div:first-child img {
